--- a/index.html
+++ b/index.html
@@ -24,5 +24,19 @@
 <div>
     <a href="./fullstack/frontend/language/html/form/from.html">form</a>
 </div>
+<div>
+    <a href="./fullstack/frontend/language/html/videos/videos.html">videos</a>
+</div>
+<div>
+    <a href="./fullstack/frontend/language/html/tables/table.html">tables</a>
+</div>
+
+<br>
+<P>-------------------------------css----------</P>
+<div>
+    <a href="./fullstack/frontend/language/css/3waysoggivingcss/inlinecss.html">inline css</a>
+</div>
+
+
   </body>
 </html>
