--- a/fullstack/frontend/language/css/3waysoggivingcss/inlinecss.html
+++ b/fullstack/frontend/language/css/3waysoggivingcss/inlinecss.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+
+
+<h1 style="color: red;">
+hello
+</h1>
+<h1>uydsghsd</h1>
+
+
+
+
     
     <div style="color: rgb(243, 239, 239); background-color: red;">
         hello im a block element 12
@@ -17,5 +27,10 @@
     <br>
     <span>hello im a inline element 1</span>
     <span>hello im a inline element 2</span>
+
+
+
+
+
 </body>
 </html>
