--- a/fullstack/frontend/language/css/3waysoggivingcss/inlinecss.html
+++ b/fullstack/frontend/language/css/3waysoggivingcss/inlinecss.html
@@ -28,7 +28,12 @@ hello
     <span>hello im a inline element 1</span>
     <span>hello im a inline element 2</span>
 
-
+<div>
+    <a href="./external.html"> external css link</a>
+</div>
+<div>
+    <a href="./inpage.html">in page css</a>
+</div>
 
 
 
