--- a/fullstack/frontend/language/css/border-radius/border-radius-background-img.html
+++ b/fullstack/frontend/language/css/border-radius/border-radius-background-img.html
@@ -13,6 +13,10 @@
         }
     </style>
     <h1><a href="./index.html">border radis main page</a></h1>
+  
     <img id="img" width="200px" height="200px" src="../../../../public/images/1.jpg" alt="" srcset="">
+<h2>on line image linkes <a href="https://simpleguics2pygame.readthedocs.io/en/latest/_static/links/img_links.html">kkk</a></h2>
+    <img src="http://commondatastorage.googleapis.com/codeskulptor-assets/lathrop/asteroid_blend.png" alt="" srcset="">
+
 </body>
 </html>
