--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
 <div>
     <a href="./fullstack/frontend/language/css/3waysoggivingcss/inlinecss.html">inline css</a>
 </div>
-
+<div>
+    <a href="./fullstack/frontend/language/css/border-radius/index.html">border radius</a>
+</div>
+<div>
+    <a href="./fullstack/frontend/language/css/boxmodel/index.html">box model</a>
+</div>
 
   </body>
 </html>
