--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
 <div>
     <a href="./fullstack/frontend/language/css/boxmodel/index.html">box model</a>
 </div>
+<div>
+    <a href="./fullstack/frontend/language/css/box-shadow/boxshadow.html">box shadow</a>
+</div>
+<div>
+    <a href="./fullstack/frontend/language/css/colors/index.html">colors</a>
+</div>
 
   </body>
 </html>
