--- a/fullstack/frontend/language/css/responsive-design/index.html
+++ b/fullstack/frontend/language/css/responsive-design/index.html
@@ -12,8 +12,8 @@
         <p>defination one code for multiple screen</p>
         <h1></h1>
         <ol>
-            <li><a href="">mediaqury</a></li>
-            <li><a href="">flex</a></li>
+            <li><a href="./mediaqury/mediaqury.html">mediaqury</a></li>
+            <li><a href="./flex/flex.html">flex</a></li>
             <li><a href="">grid</a></li>
         </ol>
     </center>
