--- a/fullstack/frontend/language/js/variables/variable.html
+++ b/fullstack/frontend/language/js/variables/variable.html
@@ -1,17 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <!-- <script>
-        var a=10
-        console.log(a)
-        
-        </script> -->
-        <script src="variable.js"></script>
-</body>
-</html>
+
+<script>
+
+    // wt is the derrence betwwween let and war
+    var a=10
+    a=20
+    console.log(a)
+    var a='hello'
+    console.log(a)
+    
+    // let b=10
+    // b=20
+    // console.log(b)
+    // let b='hello'
+    // console.log(b)
+
+    const c=10
+    c=30
+    console.log(c)
+</script>
+
+
