--- a/fullstack/frontend/language/css/responsive-design/flex/flex.html
+++ b/fullstack/frontend/language/css/responsive-design/flex/flex.html
@@ -13,7 +13,7 @@
             height: 544px;
             border: 2px solid black;
             display: flex;
-            flex-direction: column;
+            /* flex-direction: column; */
             flex-wrap: wrap;
         }
         .item{
