--- a/fullstack/frontend/language/js/variables/variable.html
+++ b/fullstack/frontend/language/js/variables/variable.html
@@ -8,12 +8,13 @@
     var a='hello'
     console.log(a)
     
-    // let b=10
-    // b=20
-    // console.log(b)
-    // let b='hello'
-    // console.log(b)
+    let b=10
+    b=20
+    console.log(b)
+    let b='hello'
+    console.log(b)
 
+    
     const c=10
     c=30
     console.log(c)
