--- a/fullstack/backend/frameworks/test.html
+++ b/fullstack/backend/frameworks/test.html
@@ -11,7 +11,7 @@
 <button>submit</button>
 </form>
 
-
+<img src="http://localhost:8003/1.jpeg" alt="">
 <script>
   async  function myfun(){
     var a=fetch('http://localhost:8003/')
